# media-cleaner

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: build-release.yml  rust.yml
src/: arguments.rs  config.rs  main.rs  media_item.rs  shared.rs  utils.rs
src/arr/: mod.rs
src/arr/radarr/: api.rs  mod.rs  responses.rs
src/arr/sonarr/: api.rs  mod.rs  responses.rs
src/media_item/: constructors.rs  functionality.rs  getters_setters.rs  mod.rs  trait_impl.rs
src/overseerr/: api.rs  mod.rs  responses.rs
src/plex/: api.rs  mod.rs  responses.rs
src/sonarr/: api.rs  mod.rs
src/tautulli/: api.rs  mod.rs  responses.rs
src/tmdb/: api.rs  mod.rs  responses.rs
