[package]
name = "media-cleaner"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
color-eyre = "0.6.2"
dialoguer = "0.10.3"
futures = "0.3.26"
itertools = "0.10.5"
once_cell = "1.17.1"
reqwest = {version = "0.11.14", features = ["json"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
serde_repr = "0.1.10"
serde_yaml = "0.9.17"
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread"] }
